# Lancer_Console

./: CMakeLists.txt  Color.h  LancerProfile.json  Lancer_Console.cpp  Lancer_Console.sln  Lancer_Console.vcxproj  Lancer_Console.vcxproj.filters  README.md  main.cpp
ConsoleIO/: CMakeLists.txt  Commands.cpp  Commands.h
Dialogue Tree/: CMakeLists.txt  DialogueTree.cpp  DialogueTree.h  Textblock.cpp  Textblock.h
Profiles/: CMakeLists.txt  Lancers.h
Text Formatting/: CMakeLists.txt  Color.h
json/: CMakeLists.txt
